--- a/styles/style.css
+++ b/styles/style.css
@@ -128,19 +128,26 @@ nav ul a{
     justify-content: space-around;
    }
      nav ul{
-        gap: 30px;
+        gap: 5px;
      }
        .boldd{
         display: none;
        }
+       .flower-title{
+    font-size: 24px;
+  margin-top: 50px;
+  align-items: center;
+
+}
 
     .flower{
     flex-direction: column-reverse;
+    align-items: center;
     margin: 0 auto;
     }
-    .flower-image{
+    /* .flower-image{
         align-items: first baseline;
-    }
+    } */
     .plant{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -148,15 +155,21 @@ nav ul a{
     row-gap: 20px;
     margin-bottom: 100px;
 }
+.our-plant{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 50px;
+}
 .plant-item>img{
-    height:290px ;
-    width:200px ;
+    height:250px ;
+   width: auto;
 }
 .btn-primary{
     background-color: #E95A08;
     color: white;
-    padding:10px 50px;
+     padding: 8px 70px;
     cursor: pointer;
+    font-size: 12px;
 
 }
 
