--- a/styles/style.css
+++ b/styles/style.css
@@ -158,6 +158,7 @@ nav ul a{
 
 /* media query mobile respnsive */
 @media screen and (max-width:576px) {
+
     .head-logo{
     display: flex;
     justify-content: space-around;
@@ -184,9 +185,7 @@ nav ul a{
     align-items: center;
     margin: 0 auto;
     }
-    .flower-image{
-        align-items: first baseline;
-    }
+    
     .plant{
        
     display: grid;
@@ -203,13 +202,14 @@ nav ul a{
     margin-bottom: 50px;
 }
 .plant-item>img{
-    height:250px ;
-   width: 195px;
+    height:185px;
+   width: 170px
 }
+
 .btn-primary{
     background-color: #E95A08;
     color: white;
-     padding: 8px 70px;
+     padding: 10px 45px;
     cursor: pointer;
     font-size: 12px;
 
@@ -229,11 +229,12 @@ nav ul a{
     font-size: 24px;
 }
 .flower-lover-title{
-    align-items: start;
+   text-align: start;
 }
 .flower-store{
-    margin-top: 50px;
-  width: 358px;
+    margin-top: 30px;
+    height: 400;
+    width: 358px;
 }
 .trusted-seller{
     display: none;
