--- a/styles/style.css
+++ b/styles/style.css
@@ -157,6 +157,7 @@ button{
     position: absolute;
     top: -120px;
     left: 360px;
+    filter: drop-shadow(10px 5px 5px gray);
    } 
 /* latest style */
 .latest-deal{
@@ -296,7 +297,7 @@ button{
     /* align-items: center; */
     font-size: 50px;
     margin-top: 200px;
-    /* color: white; */
+    color: white;
 }
 /* #colorfull-bunch{
     margin-top: 200px;
@@ -319,7 +320,7 @@ button{
     background-image: url(/assets/news-letter-bg.png);
     height: 530px;
     background-repeat: round;
-    margin-top: 110pxpx;
+    margin-top: 110px;
     
      
 }
@@ -389,11 +390,183 @@ column-gap: 30px;
     list-style-type: none;
 }
 
+
+
+
  
 
 
-/* media query mobile respnsive */
+
+/* Mobile Responsive */
 @media screen and (max-width:576px) {
+    .head-logo{
+    display: flex;
+    justify-content: space-around;
+   }
+     nav ul{
+        gap: 5px;
+     }
+       .boldd{
+        display: none;
+       }
+       .flower-title{
+    font-size: 24px;
+  margin-top: 50px;
+  align-items: center;
+
+}
+.flower-bgc-head{
+    align-items: start;
+}
+.flower-image{
+    height: 100%;
+    width: 100%;
+}
+.flower{
+    flex-direction: column-reverse;
+    align-items: center;
+    margin: 0 auto;
+    }
+     .plant{
+       
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap:3px;
+    row-gap: 20px;
+    margin-bottom: 100px;
+    }
+    .font-size{
+        font-size: 24px;
+    }
+    .our-plant{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 50px;
+}
+.plant-item>img{
+    height:185px;
+   width: 170px
+}
+.btn-primary{
+    background-color: #E95A08;
+    color: white;
+     padding: 10px 45px;
+    cursor: pointer;
+    font-size: 12px;
+
+}
+.flower-lover{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+    flex-direction: row;
+    align-items: center;
+    margin: 0 auto;
+    height: 650px;
+    width: 360px;
+  
+}
+    .flower-title-description {
+    width: 540px;
+     height: 70px;
+     align-items: center;
+}
+.flower-lover-heading {
+    font-size: 24px;
+    align-items: center;
+}
+    .flower-store{
+    margin-top: 30px;
+    height: 450px;
+    width: 358px;
+    align-items: center;
+}
+.trusted-seller{
+    display: none;
+}
+.latest-title{
+    margin-top: 300px;
+}
+.latest-plant-image{
+     display: flex;
+     flex-direction: column;
+    
+}
+.bloom-ana{
+    gap:3px;
+    display: block;
+    justify-content: center;
+    place-items: center;
+}
+.zabo-image{
+    height: 200px;
+    width: 365px;
+  
+}
+.zabo-text{
+     display: grid;
+    justify-content: center;
+    place-items: center;
+}
+.zabo-shop{
+    position: absolute;
+    top:45px;
+    right:130px;
+    font-size: 20px;
+    font-weight: bold;
+    
+}
+.zabo-now{
+      position: absolute;
+    top: 75px;
+    left: 185px;
+    font-size: 16px;
+    text-decoration: underline;
+    font-size: 18px;
+
+ }
+ .bunch-email-btn{
+    height: 280px;
+    width: 100%;
+    background-repeat: round;
+    
+    }
+
+    .subscribe{
+    /* display: flex; */
+    display: grid;
+    flex-direction: column;
+    /* place-items: center;
+    justify-content: center;
+    text-align: center; */
+    align-items: center;
+
+    
+}
+#footer-btn{
+    padding: 19px 30px;
+
+}
+.email-type{
+    /* padding: 10px 170px; */
+    height: 50px;
+    width: 250px;
+    border: none;
+    font-size: 16px;
+    padding-left: 20px;
+}
+.colorfull-bunch{
+    
+    text-align: center;
+    /* align-items: center; */
+    font-size: 30px;
+    margin-top: 200px;
+   
+}
+
+}
+/* media query mobile respnsive */
+/* @media screen and (max-width:576px) {
 
     .head-logo{
     display: flex;
@@ -482,10 +655,12 @@ column-gap: 30px;
 .trusted-seller{
     display: none;
 }
+/* plant section */
+
 /* footer section*/
 
     
-} 
+
 
 
 
