--- a/styles/style.css
+++ b/styles/style.css
@@ -1,245 +1,230 @@
 /* inter font style  */
-.inter{
+.inter {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
 /* noto sherif font style */
 
-.noto-serif{
+.noto-serif {
   font-family: "Noto Serif", serif;
   font-optical-sizing: auto;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-    font-weight: bolder;
+  font-variation-settings: "wdth" 100;
+  font-weight: bolder;
 }
 
 /* shared width */
-.width{
-      max-width: 1140px;
+.width {
+  max-width: 1140px;
 }
-main{
-    max-width: 1140px;
-    margin: 0 auto;
+main {
+  max-width: 1140px;
+  margin: 0 auto;
 }
 /* Header style */
-.head-logo{
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    align-items: center;
+.head-logo {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  align-items: center;
 }
-.home-bar{
-    color: black;
-    font-style: normal;
+.home-bar {
+  color: black;
+  font-style: normal;
 }
 /* mini bold */
-.bold-mini{
-    font-weight: bold;
+.bold-mini {
+  font-weight: bold;
 }
-.navbar{
-    
+.navbar {
 }
 nav ul {
-    display: flex;
-    list-style-type: none;
-    gap: 48px;
+  display: flex;
+  list-style-type: none;
+  gap: 48px;
 }
 
-nav ul a{
-    text-decoration: none;
-    color: #8987A1;
-    
+nav ul a {
+  text-decoration: none;
+  color: #8987a1;
 }
 /* flower style */
-.flower{
-    display: flex;
-    margin: 0 auto;
-    align-items: end;
+.flower {
+  display: flex;
+  margin: 0 auto;
+  align-items: end;
 }
-.flower-bgc-head{
-    max-width: 570px;
-    height: 290px;
-    
+.flower-bgc-head {
+  max-width: 570px;
+  height: 290px;
 }
-.flower-title{
-    font-size: 65px;
-    margin-bottom: 10px;
+.flower-title {
+  font-size: 65px;
+  margin-bottom: 10px;
 }
-.flower-description{
-    margin-top: 10px;
+.flower-description {
+  margin-top: 10px;
 }
 /* shared style with text */
-.fonts-color{
-    color: #E95A08;
+.fonts-color {
+  color: #e95a08;
 }
-.paragraph-color{
-    color: rgba(0, 0, 0, 0.5);
+.paragraph-color {
+  color: rgba(0, 0, 0, 0.5);
 }
-.margin-top{
-    margin-top: 120px;
+.margin-top {
+  margin-top: 120px;
 }
 /* plant style */
-.plant{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 20px;
-    row-gap: 30px;
-    margin-bottom: 210px;
+.plant {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 20px;
+  row-gap: 30px;
+  margin-bottom: 210px;
 }
-.plant-family{
-    font-weight: bold;
-    font-size: 50px;
-    margin-bottom: 20px;
+.plant-family {
+  font-weight: bold;
+  font-size: 50px;
+  margin-bottom: 20px;
 }
-.our-plant{
-    text-align: center;
-    margin-top: 120px;
-    margin-bottom: 50px;
+.our-plant {
+  text-align: center;
+  margin-top: 120px;
+  margin-bottom: 50px;
 }
-.plant-item{
-    text-align: center;
-
-    
+.plant-item {
+  text-align: center;
 }
-.flower-price{
-    font-size: 22px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    margin-top: 2px;
+.flower-price {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  margin-top: 2px;
 }
 /* button style */
-.btn-primary{
-    background-color: #E95A08;
-    color: white;
-    padding:12px 88px;
-    cursor: pointer;
-    border: none;
-
+.btn-primary {
+  background-color: #e95a08;
+  color: white;
+  padding: 12px 88px;
+  cursor: pointer;
+  border: none;
 }
-button{
-    cursor: pointer;
+button {
+  cursor: pointer;
 }
 /* Flower lover Section */
-.flower-lover-heading{
-    font-weight: bold;
-    font-size: 50px;
-    margin-left: 20px;
+.flower-lover-heading {
+  font-weight: bold;
+  font-size: 50px;
+  margin-left: 20px;
 }
-.plant-lover{
-    max-width: 1140px;
-    height: 600px;
-    margin-bottom: 135px; 
-      position: relative;
+.plant-lover {
+  max-width: 1140px;
+  height: 600px;
+  margin-bottom: 135px;
+  position: relative;
 }
-.flower-lover{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 60px;
-  
+.flower-lover {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 60px;
 }
-.flower-store{
-    width: 540px;
-    height: 600px;
+.flower-store {
+  width: 540px;
+  height: 600px;
 }
-.flower-lover-title{
-    width: 540px;
-    height: 600px;
+.flower-lover-title {
+  width: 540px;
+  height: 600px;
 }
-.flower-title-description{
-    width: 540px;
-    height: 110px;
+.flower-title-description {
+  width: 540px;
+  height: 110px;
 }
-   .trusted-seller{
-    width: 286px;
-    height: 286px;
-    position: absolute;
-    top: -120px;
-    left: 360px;
-    filter: drop-shadow(10px 5px 5px gray);
-   } 
+.trusted-seller {
+  width: 286px;
+  height: 286px;
+  position: absolute;
+  top: -120px;
+  left: 360px;
+  filter: drop-shadow(10px 5px 5px gray);
+}
 /* latest style */
-.latest-deal{
-    margin-bottom: 120px;
+.latest-deal {
+  margin-bottom: 120px;
 }
-.latest-title{
-    text-align: center;
+.latest-title {
+  text-align: center;
 }
 .latest-name {
-    font-weight: bold;
-    font-size: 50px;
-    margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 50px;
+  margin-bottom: 20px;
 }
-.latest-plant-image{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 30px;
-    margin-top: 120px;
-    
+.latest-plant-image {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 30px;
+  margin-top: 120px;
 }
-.latest-plant-image>img{
-    size: 100%;
-    border-radius: 15px;
+.latest-plant-image > img {
+  size: 100%;
+  border-radius: 15px;
 }
-.ana-text img{
-    border-radius: 15px;
-    row-gap: 40px;
+.ana-text img {
+  border-radius: 15px;
+  row-gap: 40px;
 }
-.bloom-text img{
-    border-radius: 15px;
-    row-gap: 40px;
+.bloom-text img {
+  border-radius: 15px;
+  row-gap: 40px;
 }
-.zabo-text img{
-    border-radius: 15px;
-    row-gap: 40px;
+.zabo-text img {
+  border-radius: 15px;
+  row-gap: 40px;
 }
-.bloom-ana{
-    display: grid;
-    row-gap: 20px;
-   
+.bloom-ana {
+  display: grid;
+  row-gap: 20px;
 }
 /* added position */
-.bloom-text{
-     position: relative;
+.bloom-text {
+  position: relative;
 }
-.bloom-image{
-    /* filter: contrast(100%) blur(1px); */
-    filter:brightness(0.60);
+.bloom-image {
+  /* filter: contrast(100%) blur(1px); */
+  filter: brightness(0.6);
 }
-.bloom-shop{
-    position: absolute;
-    top:55px;
-    right:88px ;
-    font-size: 20px;
+.bloom-shop {
+  position: absolute;
+  top: 55px;
+  right: 88px;
+  font-size: 20px;
 }
- .shop-now{
-      position: absolute;
-    top: 90px;
-    left: 138px;
-    font-size: 16px;
-    text-decoration: underline;
- }
-
-
-
-
-
-
- .ana-text{
-     position: relative;
+.shop-now {
+  position: absolute;
+  top: 90px;
+  left: 138px;
+  font-size: 16px;
+  text-decoration: underline;
 }
-.ana-image{
-    /* filter: contrast(100%) blur(1px); */
-    filter:brightness(0.60);
+
+.ana-text {
+  position: relative;
 }
-.ana-shop{
-    position: absolute;
-    top:55px;
-    right:88px ;
-    font-size: 20px;
+.ana-image {
+  /* filter: contrast(100%) blur(1px); */
+  filter: brightness(0.6);
 }
- /* .shop-now{
+.ana-shop {
+  position: absolute;
+  top: 55px;
+  right: 88px;
+  font-size: 20px;
+}
+/* .shop-now{
       position: absolute;
     top: 90px;
     left: 138px;
@@ -247,82 +232,74 @@ button{
     text-decoration: underline;
  } */
 
- .zabo-text{
-     position: relative;
+.zabo-text {
+  position: relative;
 }
-.zabo-image{
-    /* filter: contrast(100%) blur(1px); */
-    filter:brightness(0.60);
+.zabo-image {
+  /* filter: contrast(100%) blur(1px); */
+  filter: brightness(0.6);
 }
-.zabo-shop{
-    position: absolute;
-    top:130px;
-    right:170px;
-    font-size: 40px;
-    font-weight: bold;
-    
+.zabo-shop {
+  position: absolute;
+  top: 130px;
+  right: 170px;
+  font-size: 40px;
+  font-weight: bold;
 }
- .zabo-now{
-      position: absolute;
-    top: 190px;
-    left: 280px;
-    font-size: 16px;
-    text-decoration: underline;
-    font-size: 28px;
- }
+.zabo-now {
+  position: absolute;
+  top: 190px;
+  left: 280px;
+  font-size: 16px;
+  text-decoration: underline;
+  font-size: 28px;
+}
 /* news letter section */
-.news-letter{
-    width: 100%;
-    height: 540px;
-    margin-bottom: ;
- 
+.news-letter {
+  width: 100%;
+  height: 540px;
+  margin-bottom: ;
 }
-#news-letter{
-    /* position: relative; */
-        
+#news-letter {
+  /* position: relative; */
 }
 
 /* color full branch */
-.email-type{
-    /* padding: 10px 170px; */
-    height: 50px;
-    width: 645px;
-    border: none;
-    font-size: 16px;
-    padding-left: 20px;
+.email-type {
+  /* padding: 10px 170px; */
+  height: 50px;
+  width: 645px;
+  border: none;
+  font-size: 16px;
+  padding-left: 20px;
 }
-.colorfull-bunch{
-    
-    text-align: center;
-    /* align-items: center; */
-    font-size: 50px;
-    margin-top: 200px;
-    color: white;
+.colorfull-bunch {
+  text-align: center;
+  /* align-items: center; */
+  font-size: 50px;
+  margin-top: 200px;
+  color: white;
 }
 /* #colorfull-bunch{
     margin-top: 200px;
 } */
-.subscribe{
-    /* display: flex; */
-    display: grid;
-    place-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-top: 250px;
-    /* align-items: center; */
-    
+.subscribe {
+  /* display: flex; */
+  display: grid;
+  place-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 250px;
+  /* align-items: center; */
 }
-#footer-btn{
-    padding: 19px 50px;
-
+#footer-btn {
+  padding: 19px 50px;
 }
-.bunch-email-btn{
-    background-image: url(/assets/news-letter-bg.png);
-    height: 530px;
-    background-repeat: round;
-    margin-top: 110px;
-    
-     
+.bunch-email-btn {
+  background-image: url("/assets/news-letter-bg.png");
+  height: 530px;
+  background-repeat: round;
+  margin-top: 110px;
 }
 /* .bunch-email-btn{
     position: relative;
@@ -346,116 +323,105 @@ button{
 } */
 
 /* Footer Section Design */
-.footer-section{
-    max-width: 1120px;
-    height: 250px;
-    margin:0 auto;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 110px;
-    margin-bottom: 100px;
-    margin-top: 100px;
+.footer-section {
+  max-width: 1120px;
+  height: 250px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 110px;
+  margin-bottom: 100px;
+  margin-top: 100px;
 }
-.footer-sc{
-    /* display: flex; */
-    /* justify-content: space-around; */
-    /* display: grid;
+.footer-sc {
+  /* display: flex; */
+  /* justify-content: space-around; */
+  /* display: grid;
     grid-template-columns: repeat(3, 1fr);
      */
 }
-.nav-link>ul{
-    display: flex;
-    flex-direction: column;
+.nav-link > ul {
+  display: flex;
+  flex-direction: column;
 }
-.footer-navbar{
-    display: grid;
-    grid-template-columns: repeat(2,200px);
-    column-gap:30px;
+.footer-navbar {
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  column-gap: 30px;
 }
-.social-link{
-    width: 220px;
-    height: 35px;
+.social-link {
+  width: 220px;
+  height: 35px;
 }
-.social-link>ul{
-display: grid;
-grid-template-columns: repeat(4,1fr);
-column-gap: 30px;
-
+.social-link > ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 30px;
 }
-.twitter{
-    width: 25px;
-   height: 25px;
+.twitter {
+  width: 25px;
+  height: 25px;
 }
-.social-link>ul>li{
-    list-style-type: none;
+.social-link > ul > li {
+  list-style-type: none;
 }
-
-
-
-
- 
-
-
 
 /* Mobile Responsive */
-@media screen and (max-width:576px) {
-    .head-logo{
+@media screen and (max-width: 576px) {
+  .head-logo {
     display: flex;
     justify-content: space-around;
-   }
-     nav ul{
-        gap: 5px;
-     }
-       .boldd{
-        display: none;
-       }
-       .flower-title{
+  }
+  nav ul {
+    gap: 5px;
+  }
+  .boldd {
+    display: none;
+  }
+  .flower-title {
     font-size: 24px;
-  margin-top: 50px;
-  align-items: center;
-
-}
-.flower-bgc-head{
+    margin-top: 50px;
+    align-items: center;
+  }
+  .flower-bgc-head {
     align-items: start;
-}
-.flower-image{
+  }
+  .flower-image {
     height: 100%;
     width: 100%;
-}
-.flower{
+  }
+  .flower {
     flex-direction: column-reverse;
     align-items: center;
     margin: 0 auto;
-    }
-     .plant{
-       
+  }
+  .plant {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap:3px;
+    column-gap: 3px;
     row-gap: 20px;
     margin-bottom: 100px;
-    }
-    .font-size{
-        font-size: 24px;
-    }
-    .our-plant{
+  }
+  .font-size {
+    font-size: 24px;
+  }
+  .our-plant {
     text-align: center;
     margin-top: 10px;
     margin-bottom: 50px;
-}
-.plant-item>img{
-    height:185px;
-   width: 170px
-}
-.btn-primary{
-    background-color: #E95A08;
+  }
+  .plant-item > img {
+    height: 185px;
+    width: 170px;
+  }
+  .btn-primary {
+    background-color: #e95a08;
     color: white;
-     padding: 10px 45px;
+    padding: 10px 45px;
     cursor: pointer;
     font-size: 12px;
-
-}
-.flower-lover{
+  }
+  .flower-lover {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 10px;
@@ -464,104 +430,123 @@ column-gap: 30px;
     margin: 0 auto;
     height: 650px;
     width: 360px;
-  
-}
-    .flower-title-description {
+  }
+  .flower-title-description {
     width: 540px;
-     height: 70px;
-     align-items: center;
-}
-.flower-lover-heading {
+    height: 70px;
+    align-items: center;
+  }
+  .flower-lover-heading {
     font-size: 24px;
     align-items: center;
-}
-    .flower-store{
+  }
+  .flower-store {
     margin-top: 30px;
     height: 450px;
     width: 358px;
     align-items: center;
-}
-.trusted-seller{
+  }
+  .trusted-seller {
     display: none;
-}
-.latest-title{
+  }
+  .latest-title {
     margin-top: 300px;
-}
-.latest-plant-image{
-     display: flex;
-     flex-direction: column;
-    
-}
-.bloom-ana{
-    gap:3px;
+  }
+  .latest-plant-image {
+    display: flex;
+    flex-direction: column;
+  }
+  .bloom-ana {
+    gap: 3px;
     display: block;
     justify-content: center;
     place-items: center;
-}
-.zabo-image{
+  }
+  .zabo-image {
     height: 200px;
     width: 365px;
-  
-}
-.zabo-text{
-     display: grid;
+  }
+  .zabo-text {
+    display: grid;
     justify-content: center;
     place-items: center;
-}
-.zabo-shop{
+  }
+  .zabo-shop {
     position: absolute;
-    top:45px;
-    right:130px;
+    top: 50px;
+    right: 110px;
     font-size: 20px;
     font-weight: bold;
-    
-}
-.zabo-now{
-      position: absolute;
-    top: 75px;
-    left: 185px;
+  }
+  .zabo-now {
+    position: absolute;
+    top: 80px;
+    left: 145px;
     font-size: 16px;
     text-decoration: underline;
     font-size: 18px;
-
- }
- .bunch-email-btn{
+  }
+  .bunch-email-btn {
     height: 280px;
     width: 100%;
     background-repeat: round;
-    
-    }
+    position: relative;
+  }
 
-    .subscribe{
+  .subscribe {
     /* display: flex; */
     display: grid;
-    flex-direction: column;
+    place-items: center;
+    margin-bottom: ;
+    /* flex-direction: column; */
     /* place-items: center;
     justify-content: center;
     text-align: center; */
     align-items: center;
-
-    
-}
-#footer-btn{
+    position: absolute;
+    bottom: 80px;
+    left: 40px;
+  }
+  #footer-btn {
     padding: 19px 30px;
-
-}
-.email-type{
+  }
+  .email-type {
     /* padding: 10px 170px; */
     height: 50px;
     width: 250px;
     border: none;
     font-size: 16px;
     padding-left: 20px;
-}
-.colorfull-bunch{
-    
-    text-align: center;
+  }
+  .colorfull-bunch {
+    display: grid;
+    place-items: center;
+    /* text-align: center; */
     /* align-items: center; */
     font-size: 30px;
-    margin-top: 200px;
-   
+  }
+  .footer-section {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  margin-bottom: 100px;
+  margin-top: 30px;
+}
+  .footer-navbar {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  row-gap: 30px;
+}
+
+.social-link > ul {
+  display: flex;
+  /* grid-template-columns: repeat(1, 1fr); */
+  /* flex-direction: column; */
+  column-gap: 30px;
+}
+.footer-navbar{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 }
@@ -658,13 +643,3 @@ column-gap: 30px;
 /* plant section */
 
 /* footer section*/
-
-    
-
-
-
-
-
-
-
-
